      div.subtitle { 
          color:#C0F0C0; 
          font-size:0.8em; 
          margin-bottom:1em; 
          text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
$ 1.0 alpha 22
   % Build 22
  _ 2014-09-13
    * support all standard external proj4 files and all files from proj-datumgrid-1.5.zip
$ 1.0 alpha 21
   % Build 21
  _ 2014-09-12
    * rover/base antenna phase center variation support
$ 1.0 alpha 20
   % Build 20
  _ 2014-09-08
    * SP3 orbits can be provided as file in correction tab
    * Satellites antennas are included and usable with (Satellites antennas PCV)
    * New « Tools » activity for downloading latest IGS ultra rapid orbits and commons geoid models
$ 1.0 alpha 19
   % Build 19
  _ 2014-08-31
    * rtklib 2.4.2p9
    * add support for Trimble RT17, Furuno LPY1000, Sirf III/IV and Septentrio
    * chinese translation
$ 1.0 alpha 18
   % Build 18
  _ 2014-08-25
    * minor improvements of test mode
$ 1.0 alpha 17
   % Build 17
  _ 2014-08-16
    * test mode with positions from internal GPS
$ 1.0 alpha 16
   % Build 16
  _ 2014-08-15
    * support for french IGN geoportail maps
$ 1.0 alpha 15
   % Build 15
  _ 2014-08-10
    * support for RAF09 french geoid
$ 1.0 alpha 14
   % Build 14
  _ 2014-08-08
    * support for some Proj4 coordinates conversion. It is done via proj4J not proj4 jni or proj4J is a subset of proj4, some features are missing for example there is no +pm (prime meridian) parameter. This cause it is yet impossible to convert to Lambert II-Paris for example.
    * coordinate conversion for french current grids (RGF93, RGF93CC43->CC50) and american NAD83
    * display the geoid model in solution view - but validity of geoid model file is still not tested
$ 1.0 alpha 13
   % Build 13
  _ 2014-08-07
    * support for FTDI USB to serial chipsets    
$ 1.0 alpha 12
   % Build 12
  _ 2014-08-03
    * bug: altitude is not correctly computed in UTM