@@ -39,7 +39,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/tools_textView_raf09"
+            android:id="@+id/tools_textView_about_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.8"
