@@ -23,6 +23,7 @@ $ 1.0 alpha 22
    % Build 22
   _ 2014-09-13
     * support all standard external proj4 files and all files from proj-datumgrid-1.5.zip
+    * changelog is automatically shown or can be displayed in about activity
 $ 1.0 alpha 21
    % Build 21
   _ 2014-09-12
